    **** There are many changes to rendering, many of them incompatible.
       These changes *will* break existing form rendering.
       You must check and upgrade or make a copy of the old rendering code
       and include the roles (for non-widgets) or specify it in widget_name_space.
       Maintaining backward compatibility was making the code awkward and weird,
       unfortunately.
    Add 'build_field_rendering' to 'update_fields' processing
    Change form 'html_attr' to use build_html_attr instead of default
    Change interface of html_field_attributes to return attr (instead of in-place)
    Remove 'label_no_colon', make labels without colon the default.
       Add widget tag 'label_after'. Use "label_after => ': '" for old behavior
    Add widget tag 'label_tag'. Default 'label'.
    Form wrapping fieldset class is now 'form_wrapper' instead of 'main_fieldset'
    Widget_tags attribute now takes a builder, 'build_widget_tags'. Can no
       longer set with '+widget_tags'.
    Remove attribute 'auto_fieldset'; wrapping form is no longer a default;
       Add back with 'form_wrapper' => 1 in widget_tags
    Remove automatic wrapping of compounds.
       Add back with 'compound_wrapper' => 1 in widget_tags
    Rename 'no_auto_fieldset'.  Set widget_tag 'form_wrapper' => 1.
       Add 'form_wrapper_tag' to specify wrapping tag. Default 'fieldset'.
    Stop using 'html_form_tag' and use process_attrs($self->attributes)
    Put form wrapper (fieldset) around form tag instead of inside

0.36001 Tues Jan 24, 2012
    Add two more widget tags: 'no_auto_fieldset' and 'no_compound_wrapper'
    Remove automatic addition of 'class="label"' to labels; if you want that
       behavior, add it in with form sub field_html_attributes.
    Add 'SKIP' to t/config.t test for Template.
    Update Captcha so it might actually work.

0.36000 Sun Jan 22, 2012
    Switch to using 'process_attrs' function to process attributes in rendering;