@@ -4,7 +4,11 @@
        and include the roles (for non-widgets) or specify it in widget_name_space.
        Maintaining backward compatibility was making the code awkward and weird,
        unfortunately.
-    Add 'build_field_rendering' to 'update_fields' processing
+    Switch default rendering of checkbox to have label wrap input
+    Add 'render_before_form' and 'render_after_form' subs; kind of silly, but
+       might be useful in some cases.
+    Add 'build_field_rendering' to 'update_fields' processing to allow moving
+       more of rendering settings into a separate role
     Change form 'html_attr' to use build_html_attr instead of default
     Change interface of html_field_attributes to return attr (instead of in-place)
     Remove 'label_no_colon', make labels without colon the default.
